added coin display API. added a default wallpaper in case we hit fetch limit from unsplash

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <main>
+      <div class="top">
+        <div class="container">
+          <div class="coin-wrap">
+            <img id="coin-logo" src="" alt="" />
+            <p id="coin-name"></p>
+          </div>
+          <div class="coin-price"></div>
+        </div>
+        <p>Weather</p>
+      </div>
+
+      <h1 class="time">TIME HERE</h1>
+
+      <p class="author"></p>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
